# BakkesPlugin-RandomCarColor

./: .env.cmake  .gitignore  BakkesPluginTemplate1.sln  CMakeLists.txt  README.md  RandomCarColor.sln  cmakeCompileCommandsBuild.bat  dllBuild.bat  log.txt
BakkesPluginTemplate1/: BakkesPluginTemplate1.cpp  BakkesPluginTemplate1.h  BakkesPluginTemplate1.vcxproj  BakkesPluginTemplate1.vcxproj.filters  GuiBase.cpp  GuiBase.h  logging.h  pch.h
BakkesPluginTemplate1/fmt/src/: os.cc
RandomCarColor/: BMLoadout.cpp  GuiBase.cpp  GuiBase.h  RandomCarColor.cpp  RandomCarColor.filters  RandomCarColor.h  RandomCarColor.rc  RandomCarColor.vcxproj  logging.h  pch.h
RandomCarColor/fmt/src/: format.cc
plugins/: BakkesPluginTemplate1.exp  BakkesPluginTemplate1.lib
